--- a/app/src/main/res/layout/store_list_item.xml
+++ b/app/src/main/res/layout/store_list_item.xml
@@ -19,12 +19,14 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/storeNameTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="가게이름"
             android:textColor="#000000"/>
 
         <TextView
+            android:id="@+id/storeAddressTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="가게 주소가 나타납니다."/>
@@ -35,6 +37,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/storeOpenTimeTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="여는 시간"/>
@@ -45,6 +48,7 @@
                 android:text=" ~ "/>
 
             <TextView
+                android:id="@+id/storeCloseTimeTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="닫는 시간"/>
